# MBA-USP-sentiment-analysis

./: .env.template  .gitignore  pyproject.toml  readme.md  requirements.txt
Notebooks/: 00.EA_data__Sampling.ipynb  01.EA_prompts_OpenAI.ipynb  02.Processing_llm_openai.ipynb  03.BERT_Sentiment_Analyzer__generated.ipynb  04.EA_results.ipynb
src/: llm.py
src/utils/ea/: exp_funcs.py
src/utils/geminiwrapper/: gemini_wrapper.py
src/utils/notebook_vs_util/: vs_path.py
src/utils/openaiwrapper/: get_openai_cost.py  openai_cost.py  openai_wrapper.py
src/utils/sample_process/: sampling.py
